Empty files and selection
- Fixed open on empty files;
- Fixed selection